--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Food Explorer</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
